api structure, info
