# src/swagger/definition.json
@@ -2,8 +2,17 @@
   "swagger": "2.0",
   "info": {
     "title": "Devcon API",
-    "version": "0.1.0",
-    "description": ""
+    "description": "Devcon API exposes information about Devcon, past events, schedules and our video archive. You can find more information at https://github.com/efdevcon/api",
+    "version": "0.2.0",
+    "contact": {
+      "email": "support@devcon.org"
+    },
+    "license": {
+      "name": "MIT"
+    },
+    "externalDocs": {
+      "url": "https://github.com/efdevcon/api"
+    }
   },
   "host": "localhost:3000",
   "basePath": "/",
@@ -149,6 +158,34 @@
         }
       }
     },
+    "/dips": {
+      "get": {
+        "tags": [
+          "DIPs"
+        ],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/dips/contributors": {
+      "get": {
+        "tags": [
+          "DIPs"
+        ],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/events": {
       "get": {
         "tags": [
@@ -209,6 +246,27 @@
       }
     },
     "/events/{id}/speakers": {
+      "get": {
+        "tags": [
+          "Events"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/events/{id}/venue": {
       "get": {
         "tags": [
           "Events"
